--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Homework2</title>
+  <style>
+    @font-face {
+     font-family: GraphikLCG;
+     src: url(/fonts/GraphikLCG-Medium.woff);
+    }
+   </style>
 </head>
 <body>
   <div class="main_content">
