--- a/index.html
+++ b/index.html
@@ -4,30 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
   <title>Homework2</title>
-  <style>
-    @font-face {
-     font-family: GraphikLCG;
-     src: url(/fonts/GraphikLCG-Medium.woff);
-    }
-   </style>
 </head>
 <body>
-  <div class="main_content">
-    <h1 class="title"><a href="https://skillbox.ru/" target="_blank">Skillbox</a></h1>
-    <ul>
-      <div class="container">
-        <div class="sub_title1">
-          <a href="/download/2.7_Skillbox_Layout.docx" download>Скачать программу курса</a>
-        </div>
-        <div class="container">
-      <div class="sub_title2">
-        <a href="/program.html">Подробнее</a>
-      </div>
-    </div>
-    </div>
-    </ul>
-  </div>
+  <h1><a href="https://skillbox.ru/" target="_blank">Skillbox</a></h1>
+  <h3><a href="/download/2.7_Skillbox_Layout.docx" download>Скачать программу курса</a> <a href="/program.html">Подробнее</a> </h3>
 </body>
 </html>
